# topic-modeling-utama

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
dashboard/: Topic_Modeling.py  app.py  utils.py
dashboard/components/: __init__.py  charts.py  filters.py
dashboard/pages/: 1_🏠_Home.py  2_📊_Topic_Explorer.py  3_📄_Document_Browser.py  4_🔍_Similarity_Search.py  5_📈_Trend_Analysis.py  6_🎯_Topic_Comparison.py  7_⚙️_Model_Insights.py  8_🏷️_Topic_Labeling.py
data/processed/: .gitkeep  preprocessor.pkl
data/raw/: .gitkeep
docs/: bab3_metode_penelitian.md  bab4_hasil_pembahasan.md  bab5_kesimpulan_saran.md
docs/placeholder/: gambar_3_1_diagram_alur_metodologi.md  gambar_3_2_diagram_preprocessing.md  gambar_3_3_ilustrasi_lda.md  gambar_3_4_diagram_alur_sistem.md  gambar_4_1_alur_data_collection.md  gambar_4_1_distribusi_per_tahun.md  gambar_4_2_coherence_score.md  gambar_4_3_wordcloud.md  gambar_4_4_topic_prevalence.md  gambar_4_5_pyldavis.md  (+9 more)
models/: .gitkeep  corpus.mm.index  dictionary.pkl  lda_model.model  lda_model.model.expElogbeta.npy  lda_model.model.id2word  lda_model.model.state  lda_model_metadata.json  lda_model_topics.json  topic_labels.json
notebooks/: 01_data_collection.ipynb  01b_eda_raw_data.ipynb  02_data_cleaning.ipynb  02b_eda_clean_data.ipynb  03_preprocessing.ipynb  04_lda_modeling.ipynb  05_analysis_visualization.ipynb
outputs/: .gitkeep  pyldavis.html  topic_coherence_results.csv
src/: __init__.py  analysis.py  config.py  harvester.py  lda_model.py  preprocessor.py  visualizations.py
